fixed uneven rows and bubbles

--- a/assets/css/jass.css
+++ b/assets/css/jass.css
@@ -1252,8 +1252,10 @@ form [type='radio'] {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  margin-left: -15px;
-  margin-right: -15px;
+  /* margin-left: -15px;
+  margin-right: -15px; */
+  margin-left: 0px !important;
+  margin-right: 0px !important;
 }
 
 [class*='col-'] {
